# node-gn

./: .gitignore  LICENSE  README.md  TODO.md  package.json
example/simple_module/: BUILD.gn  README.md  hello.cc  hello.js
example/simple_module/buildconfig/config/node/: BUILD.gn
example/simple_module/buildconfig/toolchain/linux/: BUILD.gn
lib/: analyze.js  args.js  build.js  clean.js  config-node.js  desc.js  gen.js  init.js  initialize.js  ls.js  node-gn.js  util.js
templates/: .gn  BUILD.gn  README_gn_template.md
templates/buildconfig/config/: BUILDCONFIG.gn
templates/buildconfig/config/node/: BUILD.gn
templates/buildconfig/toolchain/linux/: BUILD.gn
templates/buildconfig/toolchain/mac/: BUILD.gn
tools/: README.md  README_gn.md  update_depot_tools.py  update_gn_binaries.py
tools/depot_tools/recipe_modules/gclient/example.expected/: basic.json
