config("node_include_dirs") {
  include_dirs = [
    "$node_root_dir/include/node",
    "$node_root_dir/src",
    "$node_root_dir/deps/uv/include",
    "$node_root_dir/deps/v8/include"
  ]
}

config("node_cxx_flags") {
  cflags_cc = [ "-std=c++11" ]
}

config("node_ld_flags") {
  ldflags = [ "-undefined" ]
  ldflags += [ "dynamic_lookup" ]
}
